feat: refactor after review

--- a/src/components/sbb-card-badge/sbb-card-badge.scss
+++ b/src/components/sbb-card-badge/sbb-card-badge.scss
@@ -24,6 +24,7 @@
   padding-inline-start: var(--sbb-spacing-fixed-1x);
   padding-inline-end: var(--sbb-spacing-fixed-8x);
   border-end-start-radius: var(--sbb-border-radius-4x);
+  z-index: inherit;
 
   // Left to right expression
   right: calc(var(--sbb-spacing-fixed-3x) * -1);
