feat: (sbb-footer): refactoring
- merge master
- PR issues, styling selectors, props and missing descriptions

--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -8,8 +8,12 @@
   --sbb-card-padding-block-start: var(--sbb-spacing-fixed-3x);
   --sbb-card-padding-block-end: var(--sbb-card-padding-block-start);
   --sbb-card-border-radius: var(--sbb-border-radius-4x);
-  --sbb-card-animation-duration: var(--sbb-animation-duration-6x);
+  --sbb-card-animation-duration: var(--sbb-animation-duration-1x);
   --sbb-card-animation-easing: var(--sbb-animation-easing);
+}
+
+:host([negative]) {
+  --sbb-card-background-color: var(--sbb-color-milk-default);
 }
 
 :host([size='s']) {
@@ -54,9 +58,14 @@
 
 .sbb-card {
   position: relative;
+  width: 100%;
   overflow: hidden;
-  transition: box-shadow var(--sbb-card-animation-duration) var(--sbb-card-animation-easing);
+  padding-inline: var(--sbb-card-padding-inline);
+  padding-block-start: var(--sbb-card-padding-block-start);
+  padding-block-end: var(--sbb-card-padding-block-end);
   border-radius: var(--sbb-card-border-radius);
+  background-color: var(--sbb-card-background-color);
+  transition: box-shadow var(--sbb-card-animation-duration) var(--sbb-card-animation-easing);
 
   &::before {
     position: absolute;
@@ -69,41 +78,30 @@
   &:focus-visible {
     @include focusOutline;
   }
+
+  :host([href]) & {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+  }
+
+  // stylelint-disable-next-line plugin/stylelint-bem-namics
+  :host(:not([href])) & {
+    @include text-inherit;
+
+    cursor: pointer;
+
+    // can't use @include buttonReset because overrides paddings, backgrounds..., only basic rules added
+    border: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -webkit-tap-highlight-color: transparent;
+  }
 }
 
 :host([active]) {
   .sbb-card::before {
     border: var(--sbb-border-width-2x) solid var(--sbb-color-smoke-default);
-  }
-}
-
-.sbb-card__link {
-  display: block;
-  color: inherit;
-  text-decoration: none;
-}
-
-.sbb-card__button {
-  @include buttonReset;
-  @include text-inherit;
-
-  cursor: pointer;
-}
-
-.sbb-card__button,
-.sbb-card__link {
-  width: 100%;
-  border-radius: var(--sbb-card-border-radius);
-  background-color: var(--sbb-card-background-color);
-  padding-inline: var(--sbb-card-padding-inline);
-  padding-block-start: var(--sbb-card-padding-block-start);
-  padding-block-end: var(--sbb-card-padding-block-end);
-}
-
-:host([negative]) {
-  .sbb-card__button,
-  .sbb-card__link {
-    --sbb-card-background-color: var(--sbb-color-milk-default);
   }
 }
 
