--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -1,4 +1,5 @@
 @import 'mixins/mixins_a11y.scss';
+@import 'mixins/mixins_badge.scss';
 @import 'mixins/mixins_buttons.scss';
 @import 'mixins/mixins_card.scss';
 @import 'mixins/mixins_grid_layout.scss';
