--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -36,6 +36,8 @@
 
   &:focus {
     @include card--shadow;
+
+    @include focusOutline;
   }
 
   // If the the device can hover over elements with ease
