--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -15,24 +15,40 @@
   --sbb-menu-max-width: #{px-to-rem-build(320)};
   --sbb-menu-min-width: #{px-to-rem-build(240)};
   --sbb-menu-border-radius: var(--sbb-border-radius-4x);
+  --sbb-menu-backdrop-color: transparent;
+
+  // Menu backdrop (only visible on mobile)
+  &::before {
+    content: '';
+    visibility: hidden;
+    pointer-events: none;
+    position: fixed;
+    inset: 0;
+    background-color: var(--sbb-menu-backdrop-color);
+    transition: {
+      duration: var(--sbb-menu-animation-duration);
+      timing-function: var(--sbb-menu-animation-easing);
+      property: background-color, visibility;
+    }
+  }
 }
 
-// On the `::backdrop` it is impossible to use any design tokens,
-// so inline values must be used (for background and animation duration in this case).
-// To learn more: https://stackoverflow.com/questions/58818299/css-variables-not-working-in-dialogbackdrop
-::backdrop {
-  --sbb-menu-backdrop-color: #{$sbb-color-black-alpha-20};
-  --sbb-menu-backdrop-animation-name: show-backdrop;
-  --sbb-menu-backdrop-animation-duration: #{$sbb-animation-duration-6x}; // --sbb-menu-animation-duration
-  --sbb-menu-backdrop-animation-easing: ease; // --sbb-menu-animation-easing
+:host(.sbb-menu--presented),
+:host(.sbb-menu--presenting) {
+  &::before {
+    --sbb-menu-backdrop-color: var(--sbb-color-black-alpha-20);
+
+    visibility: visible;
+    pointer-events: all;
+
+    @include mq($from: medium) {
+      --sbb-menu-backdrop-color: transparent;
+    }
+  }
 }
 
 :host([disable-animation]) {
   --sbb-menu-animation-duration: 0s;
-
-  ::backdrop {
-    --sbb-menu-backdrop-animation-duration: 0s;
-  }
 }
 
 // stylelint-disable plugin/stylelint-bem-namics
@@ -74,23 +90,9 @@
     }
   }
 
-  // In this block you can only use variables defined in ::backdrop.
-  &::backdrop {
-    background: var(--sbb-menu-backdrop-color);
-
-    animation: {
-      name: var(--sbb-menu-backdrop-animation-name);
-      duration: var(--sbb-menu-backdrop-animation-duration);
-      timing-function: var(--sbb-menu-backdrop-animation-easing);
-    }
-  }
-
   &.sbb-menu--dismissing {
+    pointer-events: none;
     animation-name: hide;
-
-    &::backdrop {
-      --sbb-menu-backdrop-animation-name: hide-backdrop;
-    }
   }
 
   @include ifForcedColors {
@@ -109,12 +111,6 @@
     max-width: var(--sbb-menu-max-width);
     min-width: var(--sbb-menu-min-width);
     border-radius: var(--sbb-menu-border-radius);
-
-    &::backdrop {
-      --sbb-menu-backdrop-color: transparent;
-
-      animation: none;
-    }
   }
 }
 
@@ -170,21 +166,5 @@
     visibility: hidden;
     opacity: 0;
     transform: var(--sbb-menu-transform);
-  }
-}
-
-@keyframes show-backdrop {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes hide-backdrop {
-  to {
-    opacity: 0;
   }
 }
