--- a/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-item/sbb-pearl-chain-item.scss
+++ b/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-item/sbb-pearl-chain-item.scss
@@ -2,11 +2,11 @@
 
 @mixin dot {
   border-radius: 100%;
-  border-color: white;
+  border-color: var(--sbb-color-white-default);
   position: relative;
   z-index: 2;
-  height: var(--dot-size);
-  width: var(--dot-size);
+  height: var(--sbb-dot-size);
+  width: var(--sbb-dot-size);
 }
 
 @mixin dot--transfer {
@@ -22,67 +22,63 @@
   }
 }
 
-@mixin border {
-  position: absolute;
-  top: var(--dot-size);
-  bottom: 0;
-  flex: 1 1 0%;
-  margin-inline-start: #{px-to-rem-build(4)};
-  width: #{px-to-rem-build(2)};
-}
-
 :host {
-  --dot-size-ultra: #{px-to-rem-build(12)};
-  --dot-size-large: #{px-to-rem-build(10)};
-  --dot-size-medium: #{px-to-rem-build(8)};
-  --dot-size-small: #{px-to-rem-build(7)};
-  --dot-size-extra-small: #{px-to-rem-build(6)};
-  --dot-size: var(--dot-size-small);
-  --bullet-border-width: var(--sbb-border-width-2x);
-  --border-width: var(--sbb-border-width-2x);
-  --border-width-thin: var(--sbb-border-width-1x);
-  --spacing-small: var(--sbb-spacing-fixed-1x);
-  --spacing-medium: var(--sbb-spacing-fixed-4x);
-  --color-white: var(--sbb-color-white-default);
-  --color-default: var(--sbb-color-black-default);
-  --color-current-location: var(--sbb-color-red-default);
-  --color-current-location-dark: var(--sbb-color-red150-default);
-  --color-cancellation: var(--sbb-color-red-default);
-  --color-past: var(--sbb-color-metal-default);
-  --color-sky: #0079c7;
+  display: table-row;
+
+  --sbb-dot-size-ultra: var(--sbb-spacing-fixed-3x);
+  --sbb-dot-size-large: #{px-to-rem-build(10)};
+  --sbb-dot-size-medium: var(--sbb-spacing-fixed-2x);
+  --sbb-dot-size-small: #{px-to-rem-build(7)};
+  --sbb-dot-size-extra-small: #{px-to-rem-build(6)};
+  --sbb-dot-size: var(--sbb-dot-size-small);
+  --sbb-bullet-border-width: var(--sbb-border-width-2x);
+  --sbb-border-width: var(--sbb-border-width-2x);
+  --sbb-border-width-thin: var(--sbb-border-width-1x);
+  --sbb-spacing-small: var(--sbb-spacing-fixed-1x);
+  --sbb-spacing-medium: var(--sbb-spacing-fixed-4x);
+  --sbb-color-white: var(--sbb-color-white-default);
+  --sbb-color-default: var(--sbb-color-charcoal-default);
+  --sbb-color-current-location: var(--sbb-color-red-default);
+  --sbb-color-current-location-dark: var(--sbb-color-red150-default);
+  --sbb-color-cancellation: var(--sbb-color-red-default);
+  --sbb-color-past: var(--sbb-color-metal-default);
+  --sbb-color-sky: #0079c7;
 }
 
-.position__dot--disable-animation {
+.sbb-position__dot--disable-animation {
   animation: unset;
 }
 
 .sbb-pearl-chain-item__dot-size--small {
-  margin-inline-start: #{px-to-rem-build(1.5)};
+  --sbb-dot-size: var(--sbb-dot-size-small);
 
-  --dot-size: var(--dot-size-small);
+  inset-inline-start: 50%;
+  transform: translateX(-50%);
 }
 
 .sbb-pearl-chain-item__dot-size--medium {
-  margin-inline-start: #{px-to-rem-build(1)};
+  --sbb-dot-size: var(--sbb-dot-size-medium);
 
-  --dot-size: var(--dot-size-medium);
+  inset-inline-start: 50%;
+  transform: translateX(-50%);
 }
 
 .sbb-pearl-chain-item__dot-size--large {
-  --dot-size: var(--dot-size-large);
+  --sbb-dot-size: var(--sbb-dot-size-large);
+
+  inset-inline-start: 50%;
+  transform: translateX(-50%);
 }
 
 .sbb-pearl-chain-item__dot-size--ultra {
-  margin-inline-start: -1px;
-
-  --dot-size: var(--dot-size-ultra);
+  --sbb-dot-size: var(--sbb-dot-size-ultra);
 }
 
 .sbb-pearl-chain-item__dot-size--extra-small {
-  margin-inline-start: calc(var(--dot-size-extra-small) / 2 - var(--bullet-border-width));
-  top: calc(var(--dot-size-extra-small) / 2 - var(--bullet-border-width));
+  margin-inline-start: calc(var(--sbb-dot-size-extra-small) / 2 - var(--sbb-bullet-border-width));
+  inset-block-start: calc(var(--sbb-dot-size-extra-small) / 2 - var(--sbb-bullet-border-width));
 
-  --dot-size: var(--dot-size-extra-small);
+  --sbb-dot-size: var(--sbb-dot-size-extra-small);
 }
 
 .sbb-pearl-chain-item {
@@ -90,28 +86,38 @@
 }
 
 .sbb-pearl-chain-item__line {
-  @include border;
+  position: absolute;
+  bottom: 0;
+  flex: 1 1 0%;
+  inset-inline-start: 50%;
+  transform: translateX(-50%);
+  width: var(--sbb-border-width-2x);
+  inset-block-start: var(--sbb-dot-size);
 
   &::after {
     content: '';
     position: absolute;
-    left: 0;
-    top: 0;
-    height: var(--leg-status);
-    width: var(--border-width);
-    background-color: var(--color-past);
+    inset-inline-start: 0;
+    inset-block-start: 0;
+    height: var(--sbb-leg-status);
+    width: var(--sbb-border-width);
+    background-color: var(--sbb-color-past);
   }
 }
 
-.position__dot {
-  --dot-size: var(--dot-size-large);
+.sbb-position__dot {
   @include dot;
 
+  --sbb-dot-size: var(--sbb-dot-size-large);
+
+  inset-block-start: var(--sbb-position);
   position: absolute;
-  animation: pulse 4800ms var(--sbb-animation-easing) infinite;
-  border: var(--border-width) currentcolor;
-  border-color: var(--color-cancellation);
-  background-color: var(--color-cancellation);
+  animation: pulse 2800ms var(--sbb-animation-easing) infinite;
+  border: var(--sbb-border-width) currentcolor;
+  border-color: var(--sbb-color-cancellation);
+  background-color: var(--sbb-color-cancellation);
+  inset-inline-start: 50%;
+  transform: translateX(-50%);
 }
 
 .sbb-pearl-chain-item__line--dotted {
@@ -121,84 +127,66 @@
     to bottom,
     currentcolor 0%,
     currentcolor 50%,
-    var(--color-white) 50%
+    var(--sbb-color-white) 50%
   );
   background-repeat: repeat-y;
-  background-size: calc(2 * var(--spacing-small)) var(--spacing-small);
-  margin-inline-start: #{px-to-rem-build(4)};
+  background-size: calc(2 * var(--sbb-spacing-small)) var(--sbb-spacing-small);
 }
 
 .sbb-pearl-chain-item__line--thin {
-  width: var(--border-width-thin);
-  margin-left: #{px-to-rem-build(4.48)};
+  width: var(--sbb-border-width-thin);
 }
 
 .sbb-pearl-chain-item__dot--standard {
   @include dot;
 
-  border: var(--border-width) currentcolor;
+  border: var(--sbb-border-width) currentcolor;
 }
 
 .sbb-pearl-chain-item__dot--thick-bullet {
   @include dot--transfer;
 
-  border: var(--bullet-border-width) solid currentcolor;
-  background-color: var(--color-white) !important;
+  border: var(--sbb-bullet-border-width) solid currentcolor;
+  background-color: var(--sbb-color-white) !important;
 }
 
 .sbb-pearl-chain-item__dot--thin-bullet {
-  --bullet-border-width: var(--border-width-thin);
   @include dot--transfer;
 
-  border: var(--bullet-border-width) solid currentcolor;
-  background-color: var(--color-white) !important;
+  --sbb-bullet-border-width: var(--sbb-border-width-thin);
+
+  border: var(--sbb-bullet-border-width) solid currentcolor;
+  background-color: var(--sbb-color-white) !important;
 }
 
-.sbb-color__black {
-  background-color: var(--color-default);
-  border-color: var(--color-default);
-  color: var(--color-default);
+.sbb-color--charcoal {
+  background-color: var(--sbb-color-default);
+  border-color: var(--sbb-color-default);
+  color: var(--sbb-color-default);
 }
 
-.sbb-color__red {
-  border-color: var(--color-cancellation);
-  background-color: var(--color-cancellation);
-  color: var(--color-cancellation);
+.sbb-color--red {
+  border-color: var(--sbb-color-cancellation);
+  background-color: var(--sbb-color-cancellation);
+  color: var(--sbb-color-cancellation);
 }
 
-.sbb-color__gray {
-  border-color: var(--color-past);
-  background-color: var(--color-past);
-  color: var(--color-past);
+.sbb-color--metal {
+  border-color: var(--sbb-color-past);
+  background-color: var(--sbb-color-past);
+  color: var(--sbb-color-past);
 }
 
-.sbb-color__sky {
-  border-color: var(--color-sky);
-  background-color: var(--color-sky);
-  color: var(--color-sky);
+.sbb-color--sky {
+  border-color: var(--sbb-color-sky);
+  background-color: var(--sbb-color-sky);
+  color: var(--sbb-color-sky);
 }
 
-.sbb-pearl-chain-item__row--middle {
+.sbb-pearl-chain-item__column {
+  display: table-cell;
   position: relative;
-  padding-top: 0;
   vertical-align: top;
-  padding-inline-start: var(--spacing-small);
-  padding-inline-end: var(--spacing-medium);
-}
-
-.sbb-pearl-chain-item__left-slot {
-  margin-top: 1px;
-}
-
-.sbb-pearl-chain-item__row--left {
-  vertical-align: top;
-  position: relative;
-}
-
-.sbb-pearl-chain-item__row--right {
-  vertical-align: top;
-  position: relative;
-  padding-bottom: var(--sbb-spacing-fixed-3x);
 }
 
 .sbb-pearl-chain-item__middle {
