feat: improve stories and documentation

--- a/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-item/sbb-pearl-chain-item.scss
+++ b/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-item/sbb-pearl-chain-item.scss
@@ -46,7 +46,7 @@
 }
 
 .sbb-position__dot--disable-animation {
-  animation: unset;
+  animation: unset !important;
 }
 
 .sbb-pearl-chain-item__dot-size--small {
