--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -25,6 +25,7 @@
 
 .sbb-icon {
   color: var(--slider-icon-color);
+  cursor: pointer;
 }
 
 .slider__wrapper {
@@ -33,6 +34,7 @@
   width: 100%;
   display: flex;
   gap: var(--sbb-spacing-fixed-2x);
+  padding-block: var(--sbb-spacing-fixed-2x);
 }
 
 .slider__container {
@@ -44,6 +46,7 @@
   position: absolute;
   inset: 0;
   opacity: 0;
+  margin: 0;
 }
 
 .slider__line {
