--- a/src/global/mixins.scss
+++ b/src/global/mixins.scss
@@ -1,11 +1,13 @@
+@import 'mixins/mixins_a11y.scss';
+@import 'mixins/mixins_badge.scss';
+@import 'mixins/mixins_buttons.scss';
+@import 'mixins/mixins_card.scss';
+@import 'mixins/mixins_grid_layout.scss';
+@import 'mixins/mixins_panel.scss';
+@import 'mixins/mixins_scrollbar.scss';
 @import 'mixins/mixins_shadows.scss';
 @import 'mixins/mixins_spacing.scss';
-@import 'mixins/mixins_a11y.scss';
-@import 'mixins/mixins_card.scss';
-@import 'mixins/mixins_buttons.scss';
-@import 'mixins/mixins_panel.scss';
 @import 'mixins/mixins_typo.scss';
-@import 'mixins/mixins_grid_layout.scss';
 
 @import 'mixins/mixins_dev_and_debug.scss';
 
