--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -5,15 +5,6 @@
 // Displays the action item's text and corrects spacings.
 $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
-@mixin expandFromBreakpoint($fromValue) {
-  @include mq($from: $fromValue) {
-    --sbb-header-action-text-display: block;
-    --sbb-header-action-icon-margin: var(--sbb-spacing-fixed-2x);
-    --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);
-    --sbb-header-action-min-width: inherit;
-  }
-}
-
 :host {
   --sbb-header-action-text-display: none;
   --sbb-header-action-icon-margin: 0;
@@ -27,7 +18,12 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 @each $breakpoint in $breakpoints {
   :host([expand-from='#{$breakpoint}']) {
-    @include expandFromBreakpoint($breakpoint);
+    @include mq($from: $breakpoint) {
+      --sbb-header-action-text-display: block;
+      --sbb-header-action-icon-margin: var(--sbb-spacing-fixed-2x);
+      --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);
+      --sbb-header-action-min-width: inherit;
+    }
   }
 }
 
@@ -65,6 +61,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
   :host([href]) & {
     text-decoration: none;
+    cursor: pointer;
   }
 
   /* stylelint-disable-next-line plugin/stylelint-bem-namics */
@@ -73,8 +70,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
     cursor: pointer;
     border: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+    appearance: none;
     -webkit-tap-highlight-color: transparent;
   }
 }
