--- a/src/components/sbb-slider/sbb-slider.scss
+++ b/src/components/sbb-slider/sbb-slider.scss
@@ -3,32 +3,32 @@
 @include host-component-properties;
 
 :host {
-  --slider-line-height: #{px-to-rem-build(4)};
-  --slider-value-fraction: 0;
-  --slider-step-fraction: 0;
-  --slider-step-gap: #{px-to-rem-build(4)};
-  --slider-knob-size: #{px-to-rem-build(28)};
-  --slider-knob-border-size: #{px-to-rem-build(3)};
-  --slider-icon-color: var(--sbb-color-black-default);
+  --sbb-slider-line-height: #{px-to-rem-build(4)};
+  --sbb-slider-value-fraction: 0;
+  --sbb-slider-step-fraction: 0;
+  --sbb-slider-step-gap: #{px-to-rem-build(4)};
+  --sbb-slider-knob-size: #{px-to-rem-build(28)};
+  --sbb-slider-knob-border-size: #{px-to-rem-build(3)};
+  --sbb-slider-icon-color: var(--sbb-color-black-default);
 
   line-height: var(--sbb-typo-line-height-body-text);
 }
 
 // override icons color
 :host([disabled]) {
-  --slider-icon-color: var(--sbb-color-graphite-default);
+  --sbb-slider-icon-color: var(--sbb-color-graphite-default);
 }
 
 :host([readonly]) {
-  --slider-icon-color: var(--sbb-color-smoke-default);
+  --sbb-slider-icon-color: var(--sbb-color-smoke-default);
 }
 
 .sbb-icon {
-  color: var(--slider-icon-color);
+  color: var(--sbb-slider-icon-color);
   cursor: pointer;
 }
 
-.slider__wrapper {
+.sbb-slider__wrapper {
   max-width: #{px-to-rem-build(400)};
   min-width: #{px-to-rem-build(200)};
   width: 100%;
@@ -37,104 +37,104 @@
   padding-block: var(--sbb-spacing-fixed-1x);
 }
 
-.slider__container {
+.sbb-slider__container {
   position: relative;
   flex-grow: 1;
 }
 
-.slider__range-input {
+.sbb-slider__range-input {
   position: absolute;
   inset: 0;
   opacity: 0;
   margin: 0;
 }
 
-.slider__line {
+.sbb-slider__line {
   @include absoluteCenterY;
 
-  height: var(--slider-line-height);
+  height: var(--sbb-slider-line-height);
   width: 100%;
-  border-radius: var(--slider-line-height);
+  border-radius: var(--sbb-slider-line-height);
   overflow: hidden;
   pointer-events: none;
 
-  &:not(.slider__line--stepped) {
+  &:not(.sbb-slider__line--stepped) {
     background-color: var(--sbb-color-smoke-default);
   }
 }
 
-.slider__line-disabled,
-.slider__line-readonly {
+.sbb-slider__line-disabled,
+.sbb-slider__line-readonly {
   @include absoluteCenterY;
 
-  height: var(--slider-line-height);
+  height: var(--sbb-slider-line-height);
   width: 100%;
-  border-radius: var(--slider-line-height);
+  border-radius: var(--sbb-slider-line-height);
   overflow: hidden;
   pointer-events: none;
 
-  &:not(.slider__line--stepped) {
+  &:not(.sbb-slider__line--stepped) {
     background-color: var(--sbb-color-graphite-default);
   }
 }
 
-.slider__line--stepped {
+.sbb-slider__line--stepped {
   background: repeating-linear-gradient(
     to right,
     transparent 0,
-    transparent var(--slider-step-gap),
-    var(--sbb-color-smoke-default) var(--slider-step-gap),
-    var(--sbb-color-smoke-default) calc(var(--slider-step-fraction) * 100%)
+    transparent var(--sbb-slider-step-gap),
+    var(--sbb-color-smoke-default) var(--sbb-slider-step-gap),
+    var(--sbb-color-smoke-default) calc(var(--sbb-slider-step-fraction) * 100%)
   );
 }
 
-.slider__selected-line {
+.sbb-slider__selected-line {
   position: relative;
   height: 100%;
   background-color: var(--sbb-color-red-default);
-  width: calc(var(--slider-value-fraction) * 100%);
+  width: calc(var(--sbb-slider-value-fraction) * 100%);
 }
 
-.slider__selected-line-disabled,
-.slider__selected-line-readonly {
+.sbb-slider__selected-line-disabled,
+.sbb-slider__selected-line-readonly {
   position: relative;
   height: 100%;
   background-color: var(--sbb-color-smoke-default);
-  width: calc(var(--slider-value-fraction) * 100%);
+  width: calc(var(--sbb-slider-value-fraction) * 100%);
 }
 
-.slider__knob,
-.slider__knob-disabled,
-.slider__knob-readonly {
+.sbb-slider__knob,
+.sbb-slider__knob-disabled,
+.sbb-slider__knob-readonly {
   @include absoluteCenterY;
   @include shadow-level-5-hard;
 
-  width: var(--slider-knob-size);
-  height: var(--slider-knob-size);
+  width: var(--sbb-slider-knob-size);
+  height: var(--sbb-slider-knob-size);
   inset-inline-start: calc(
-    calc(var(--slider-value-fraction) * 100%) - var(--slider-knob-size) *
-      var(--slider-value-fraction)
+    calc(var(--sbb-slider-value-fraction) * 100%) - var(--sbb-slider-knob-size) *
+      var(--sbb-slider-value-fraction)
   );
   transition-property: width, height;
   transition-duration: var(--sbb-animation-duration-1x);
   transition-timing-function: ease-in;
   background-color: var(--sbb-color-white-default);
-  border: var(--slider-knob-border-size) solid var(--sbb-color-red-default);
+  border: var(--sbb-slider-knob-border-size) solid var(--sbb-color-red-default);
   border-radius: 50%;
   pointer-events: none;
 }
 
-.slider__knob-disabled {
+.sbb-slider__knob-disabled {
   background-color: var(--sbb-color-milk-default);
   border-color: var(--sbb-color-graphite-default);
 }
 
-.slider__knob-readonly {
+.sbb-slider__knob-readonly {
   border-color: var(--sbb-color-smoke-default);
 }
 
 // slider knob resize on click (active / focus)
-.slider__range-input:active ~ .slider__knob,
-.slider__range-input:focus-visible ~ .slider__knob {
-  --slider-knob-size: #{px-to-rem-build(31)};
+.sbb-slider__range-input:active ~ .slider__knob,
+.sbb-slider__range-input:focus-visible ~ .slider__knob {
+  --sbb-slider-knob-size: #{px-to-rem-build(31)};
 }
