--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -36,6 +36,10 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 }
 
 .sbb-header-action__icon {
+  // set stroke on header icons
+  --sbb-icon-svg-stroke-color: currentcolor;
+  --sbb-icon-svg-stroke-width: 2px;
+
   line-height: 0;
   color: var(--sbb-color-black-default);
   margin-right: var(--sbb-header-action-icon-margin);
