--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -63,8 +63,8 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   padding-inline: var(--sbb-header-action-padding-inline);
   border-radius: var(--sbb-border-radius-16x);
   transition-property: background-color;
-  transition-duration: var(--sbb-animation-duration-2x);
-  transition-timing-function: ease-in;
+  transition-duration: var(--sbb-animation-duration-6x);
+  transition-timing-function: ease;
   cursor: pointer;
 
   :host([href]) & {
