--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -16,6 +16,10 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   display: flex;
 }
 
+:host(:first-child) {
+  margin-left: calc(var(--sbb-spacing-fixed-2x) * (-1));
+}
+
 @each $breakpoint in $breakpoints {
   :host([expand-from='#{$breakpoint}']) {
     @include mq($from: $breakpoint) {
@@ -23,6 +27,11 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
       --sbb-header-action-icon-margin: var(--sbb-spacing-fixed-2x);
       --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);
       --sbb-header-action-min-width: inherit;
+    }
+  }
+  :host([expand-from='#{$breakpoint}']:first-child) {
+    @include mq($from: $breakpoint) {
+      margin-left: calc(var(--sbb-spacing-fixed-5x) * (-1));
     }
   }
 }
@@ -38,7 +47,7 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 .sbb-header-action__icon {
   // set stroke on header icons
   --sbb-icon-svg-stroke-color: currentcolor;
-  --sbb-icon-svg-stroke-width: 2px;
+  --sbb-icon-svg-stroke-width: 0.5px;
 
   line-height: 0;
   color: var(--sbb-color-black-default);
